--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@ ZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
             <div class="twitter"><a class="fab fa-twitter" href="https://twitter.com/design_etoile"></a></div>
           </div>
         </div>
+        <p class="copyright">©2022 etoile dsign</p>
       </div>
     </div>
   </footer>
