--- a/about.html
+++ b/about.html
@@ -131,6 +131,7 @@
         <p>TOPへ戻る</p>
       </a>
     </div>
+    <p class="copyright">©2022 etoile dsign</p>
   </div>
 
   <!-- ハンバーガーメニュー  -->
