--- a/work.html
+++ b/work.html
@@ -190,6 +190,7 @@
             <p>TOPへ戻る</p>
           </a>
         </div>
+        <p class="copyright">©2022 etoile design</p>
       </div>
 
 
