--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="index.html#service">SERVICE</a></li>
           <li>
-            <h1 class="logo"><a href="index.html#header"><img src="images/logo5.svg" alt="etoile design ロゴ"></a></h1>
+            <h1 class="logo1"><a href="index.html#header"><img src="images/logo5.svg" alt="etoile design ロゴ"></a></h1>
           </li>
           <li><a href="work.html">WORK</a></li>
           <li><a href="index.html#contact">CONTACT</a></li>
@@ -61,18 +61,20 @@
             <img src="images/About_pic.jpg" alt="プロフィール写真">
           </p>
           <div class="fs_icons">
-            <div class="instagram"><a class="fab fa-instagram" href="https://www.instagram.com/etoile___design/" target="_blank"></a>
+            <div class="instagram"><a class="fab fa-instagram" href="https://www.instagram.com/etoile___design/"
+                target="_blank"></a>
             </div>
-            <div class="twitter"><a class="fab fa-twitter" href="https://twitter.com/design_etoile" target="_blank"></a></div>
+            <div class="twitter"><a class="fab fa-twitter" href="https://twitter.com/design_etoile" target="_blank"></a>
+            </div>
           </div>
         </div>
         <div class="profile_right">
           <p class="profile_title">Name</p>
-          <p class="profile_name">逵　瞳（つじ　ひとみ）　</p>
+          <p class="profile_name">前久保　瞳</p>
           <p class="profile_title">Profile</p>
           <p class="profile_text profile_birth">9月29日生まれ｜愛知県名古屋市在住</p>
-          <p class="profile_text profile_text1">
-            これまで、イタリアとフランスの商品を取扱う外資アパレルで10年間勤務してきました。お客様のニーズに耳を傾け、魅力を引き出し、１人１人に合った最善のご提案を得意としています。プライベートでは海外へ行くことが好きで、五感が刺撃されるたくさんのデザインやカルチャーに触れてきました。これまでの経験から培ってきたことを活かしWebデザインの道へ。
+          <p class="profile_text1">
+            これまで、イタリアとフランスの商品を取扱う外資アパレルで10年間勤務してきました。<br>お客様のニーズに耳を傾け、魅力を引き出し、１人１人に合った最善のご提案を得意としています。プライベートでは海外へ行くことが好きで、五感が刺撃されるたくさんのデザインやカルチャーに触れてきました。これまでの経験から培ってきたことを活かしWebデザインの道へ。
           </p>
           <p class="profile_title">Hobbies</p>
           <p class="profile_text">■トレーニング(ほぼ毎日GYM行ってます！現在はスクワット80kgを１つの目標としてます。)<br><br>
@@ -131,7 +133,7 @@
         <p>TOPへ戻る</p>
       </a>
     </div>
-    <p class="copyright">©2022 etoile dsign</p>
+    <p class="copyright">©️2022 etoile design</p>
   </div>
 
   <!-- ハンバーガーメニュー  -->
