--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
           <div class="work_box2">
             <p class="work_title">フェスのバナー</p>
             <p class="work_text">Photoshopで２枚の画像を合成し、幻想的な空間を演出しました。
-              自然の雰囲気を大切にしたかったので、文字ぐみを硬くなりすぎないように意識して作成しています。
+              自然の雰囲気を大切にしたかったので、文字組みを堅くなりすぎないように意識して作成しています。
             </p>
             <div class="work_box3">
               <div class="work_box4">
