--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
           <li><a href="about.html">ABOUT</a></li>
           <li><a href="index.html#service">SERVICE</a></li>
           <li>
-            <h1 class="logo"><a href="index.html#header"><img src="images/logo5.svg" alt="etoile design ロゴ"></a></h1>
+            <h1 class="logo1"><a href="index.html#header"><img src="images/logo5.svg" alt="etoile design ロゴ"></a></h1>
           </li>
           <li><a href="work.html">WORK</a></li>
           <li><a href="index.html#contact">CONTACT</a></li>
